--- a/drugaddiction/src/main/AndroidManifest.xml
+++ b/drugaddiction/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Admin.AdminMain" />
+        <activity android:name=".Registeration.SignUpMain" />
         <activity android:name=".More.MoreBidOwner" />
         <activity android:name=".MorePost.MorePost" />
         <activity
