--- a/drugaddiction/src/main/AndroidManifest.xml
+++ b/drugaddiction/src/main/AndroidManifest.xml
@@ -21,43 +21,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Physicologest.PhysicoMain"></activity>
+        <activity android:name=".Registeration.Main2Activity" />
         <activity android:name=".Admin.AdminMain" />
         <activity android:name=".Registeration.SignUpMain" />
-        <activity android:name=".More.MoreBidOwner" />
-        <activity android:name=".MorePost.MorePost" />
-        <activity
-            android:name=".ChatRoom.ChatListActivity"
-            android:parentActivityName=".UserProfile.UserProfile" />
-        <activity
-            android:name=".ChatRoom.ChatActivity"
-            android:parentActivityName=".ChatRoom.ChatListActivity" />
-        <activity android:name=".More.MoreBids" />
-        <activity android:name=".More.MorePost" />
-        <activity android:name=".BooksCatagory.CollogeCatagory" />
-        <activity android:name=".BooksCatagory.OtherCatagory" />
-        <activity android:name=".BooksCatagory.BscCatagory" />
-        <activity android:name=".BooksCatagory.PoetryCatagory" />
-        <activity android:name=".BooksCatagory.NovelsCatagory" />
-        <activity android:name=".BooksCatagory.SchoolCatagory" />
-        <activity android:name=".BooksCatagory.IslamicCatagory" />
-        <activity android:name=".BooksCatagory.ManagementCatagory" />
-        <activity android:name=".BooksCatagory.CsCatagory" />
-        <activity android:name=".BooksCatagory.ReqDonationCatagory" />
-        <activity android:name=".BooksCatagory.DonateBookCatagory" />
-        <activity android:name=".BooksCatagory.ExchangeBookCatagory" />
-        <activity android:name=".BooksCatagory.SellBookCatagory" />
-        <activity
-            android:name=".RegisterBooks.RequestDonation"
-            android:parentActivityName=".MainActivity" />
-        <activity
-            android:name=".RegisterBooks.DonateBooks"
-            android:parentActivityName=".MainActivity" />
-        <activity
-            android:name=".RegisterBooks.ExchangeBooks"
-            android:parentActivityName=".MainActivity" />
-        <activity
-            android:name=".RegisterBooks.SellBook"
-            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".SpleshScreen"
             android:theme="@style/Theme.Design.NoActionBar">
@@ -67,10 +34,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".RegisterBooks.SellBooks"
-            android:parentActivityName=".MainActivity" />
-        <activity android:name=".BooksCatagory.EngeneeringBooks" />
         <activity
             android:name=".UserProfile.UserProfile"
             android:parentActivityName=".MainActivity" />
